# mms-monthly-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yml
mms_monthly_cli/: cli.py  mms_monthly.py
tests/: conftest.py  test_mms_monthly_cli.py
